fixed phrase details on large screen, when no examples and/or no tags, the votes and author section were overlapping the definition

--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -221,6 +221,7 @@ div.rest {
                             @include breakpoint($large-screen) {
                                 @include span(5 of 10);
                                 border-bottom: 0px none black;
+                                min-height: 40px;
                             }
                             @include span(1 of 1);
                             padding-bottom: $base-block-padding;
